Added static reference for JS command execution. Bring to front method for better applet visualization added. URLOutputParams now support an array of values.
git-svn-id: http://jira.uji.es/repos/uji/trunk@2953 e6edf6fb-f266-4316-afb4-e53d95876a76